# fastapi-config-server

./: README.md  pyproject.toml
app/lib/: singleton.py
app/tests/unit_tests/lib/: singleton.py
