[tool.poetry]
name = "fastapi-config-server"
version = "0.1.0"
description = "A server based on FastAPI that serves configurations from various providers"
authors = ["Kishan Reddy <kishanreddy.kethu@gmail.com>"]
license = "MIT License"

[tool.poetry.dependencies]
python = "^3.7"
fastAPI = "^0.55.1"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
